# ronky

./: .commitlintrc.json  .pre-commit-config.yaml  .prek.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: release-pilot.yml  renovate.json  renovate.json5
.github/workflows/: auto-fix.yml  ci.yml  commitlint.yml  crates-io.yml  deploy.yml  dev_release.yml  release.yml  scheduled-maintenance.yml  version_bump.yml  weekly_release.yml
arri_common/: Cargo.toml  README.md
arri_common/src/: enum_transformation.rs  lib.rs
arri_repr/: Cargo.toml
arri_repr/src/: elements.rs  empty.rs  enum.rs  enum_transformation.rs  exportable.rs  lib.rs  metadata.rs  properties.rs  ref.rs  serializable.rs  serializer.rs  tagged_union.rs  type.rs  value.rs  values.rs
crates/exported/: Cargo.toml  README.md
crates/exported/src/: lib.rs
crates/proc/: Cargo.toml  README.md
crates/proc/src/: formatter.rs  lib.rs
crates/proc/src/fmt/: base.rs  generic.rs  mod.rs  vec.rs
crates/proc/tests/: struct.rs
docs/: AUTO_FIXING.md
examples/about/: Cargo.toml  README.md  out.json
examples/about/src/: main.rs
examples/custom_result/: Cargo.toml  README.md
examples/custom_result/src/: main.rs
ronky/: Cargo.toml
ronky/src/: lib.rs  serialization.rs
ronky/src/repr/: properties.rs  type.rs
ronky/src/serialization/: serializable.rs  types.rs
ronky_derive/: Cargo.toml
ronky_derive/src/: enum.rs  enum_transformation.rs  exported_with_serialization.rs  lib.rs  metadata.rs  named_struct.rs  serialization.rs  tuple_struct.rs
ronky_derive/src/parsers/: mod.rs
ronky_derive/src/parsers/attributes/: enum_variants.rs  fields.rs  mod.rs  properties.rs  typeschema.rs
ronky_derive/src/parsers/fields/: base.rs  mod.rs
ronky_derive/src/parsers/types/: arri_types.rs  mod.rs
scripts/: pre-commit-all.sh
src/: lib.rs  main.rs
src/repr/: metadata.rs  mod.rs
src/serialization/: mod.rs
test_suite/: Cargo.toml  README.md
test_suite/src/: basic_export.rs  deprecated_export.rs  enum_export.rs  lib.rs  metadata_export.rs  nested_export.rs  nullable_export.rs  primitives_export.rs  ref_export.rs  serialisation.rs  static_export.rs  static_generic_export.rs  strict_export.rs  tagged_union_export.rs  values_export.rs
test_suite/tests/: any_export.rs  basic_export.rs  compile_errors.rs  enum_export.rs  metadata_export.rs  multiple_derives_no_collision.rs  nested_export.rs  nullable_export.rs  partnered_libs_serialization.rs  primitives_export.rs  ref_export.rs  serialisation.rs  serializable_derive.rs  serialization.rs  serialization_export.rs  static_export.rs  static_generic_export.rs  strict_export.rs  tagged_union_export.rs  tuple_struct_export.rs  values_export.rs
test_suite/tests/compile_fail/: cross_enum_type.stderr  disciminator_non_tagged_union.rs  disciminator_non_tagged_union.stderr  discriminator_no_args.rs  discriminator_no_args.stderr  empty_arri_attribute.stderr  no_arri_attribute_arguments.rs  no_arri_attribute_arguments.stderr  nullable_non_option.rs  nullable_non_option.stderr  optional_fields_in_unnamed_enum.rs  optional_fields_in_unnamed_enum.stderr  rename_empty.rs  rename_empty.stderr  rename_no_args.rs  rename_no_args.stderr  rename_spaces.rs  rename_spaces.stderr  rename_special_chars.rs  rename_special_chars.stderr  rename_start_with_number.rs  rename_start_with_number.stderr  transform_no_args.rs  transform_no_args.stderr  tuple_struct_empty.rs  tuple_struct_empty.stderr  tuple_struct_multiple_fields.rs  tuple_struct_multiple_fields.stderr  unnamed_multiple_fields.rs  unnamed_multiple_fields.stderr  unsupported_export_types.rs  unsupported_export_types.stderr
test_suite/tests/fail/: cross_enum_type.rs  cross_enum_type.stderr  empty_arri_attribute.rs  empty_arri_attribute.stderr
