[patch.crates-io]
ronky = { path = "ronky" }

[workspace]
resolver = "2"
members = [
  "ronky"
]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Arthur De Witte <dev@arthurdw.com>"]
repository = "https://github.com/Arthurdw/ronky"
categories = ["development-tools"]
keywords = ["arri"]

[workspace.lints.clippy]
multiple_crate_versions = "allow"

style = "deny"
complexity = "deny"
perf = "deny"
cargo = "deny"
correctness = "deny"
use_self = "deny"

[workspace.dependencies]
