[patch.crates-io]
ronky = { path = "ronky" }

[workspace]
resolver = "2"
members = ["arri_repr", "ronky", "ronky_derive", "test_suite"]

[workspace.package]
version = "1.0.0-alpha.5"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Arthur De Witte <dev@arthurdw.com>"]
repository = "https://github.com/Arthurdw/ronky"
categories = ["development-tools"]
keywords = ["arri"]

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
cargo = "deny"
correctness = "deny"
use_self = "deny"

[workspace.dependencies]
ronky = { path = "ronky", version = "1.0.0-alpha.5" }
arri_repr = { path = "arri_repr", version = "1.0.0-alpha.5" }
ronky_derive = { path = "ronky_derive/", version = "1.0.0-alpha.5" }
