[patch.crates-io]
ronky = { path = "ronky" }

[workspace]
resolver = "2"
members = [
  "arri_common",
  "arri_repr",
  "ronky",
  "ronky_derive",
  "test_suite",
  "examples/*",
]

[workspace.package]
version = "1.2.2"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Arthur De Witte <dev@arthurdw.com>"]
repository = "https://github.com/Arthurdw/ronky"
categories = ["development-tools"]
keywords = ["arri"]

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
cargo = "deny"
correctness = "deny"
use_self = "deny"

[workspace.dependencies]
ronky = { path = "ronky", version = "1.2.0" }
arri_repr = { path = "arri_repr", version = "1.2.0" }
ronky_derive = { path = "ronky_derive/", version = "1.2.0" }
arri_common = { path = "arri_common", version = "1.2.0" }
heck = "0.5.0"
sonic-rs = "0.5.4"
serde = { version = "1.0", features = ["derive"] }

# Partnered libraries
chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3.41", features = ["serde", "parsing", "formatting"] }
uuid = { version = "1.16.0", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-bigfloat = { version = "1.7.2", features = ["serde"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
decimal = { version = "2.1.0", features = ["serde"], default-features = false }
url = { version = "2.5.4", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
indexmap = { version = "2.9.0", features = ["serde"] }
smallvec = { version = "1.15.0", features = ["serde"] }
