[package]
name = "arri_repr"
description = "Rust representations of Arri types"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dev-dependencies]
# TODO: be able to remove this dev dependency
serde_json = "1.0.140"

[features]
chrono = ["dep:chrono"]
time = ["dep:time"]
uuid = ["dep:uuid"]
bigdecimal = ["dep:bigdecimal"]
num-bigint = ["dep:num-bigint"]
num-bigfloat = ["dep:num-bigfloat"]
rust_decimal = ["dep:rust_decimal"]
decimal = ["dep:decimal"]
url = ["dep:url"]
bytes = ["dep:bytes"]
dashmap = ["dep:dashmap"]
indexmap = ["dep:indexmap"]
smallvec = ["dep:smallvec"]

[dependencies]
# TODO: see if we can make downcast also a feature flag
downcast-rs = "2.0.1"
chrono = { version = "0.4.41", optional = true }
time = { version = "0.3.41", optional = true }
uuid = { version = "1.16.0", optional = true }
bigdecimal = { version = "0.4.8", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-bigfloat = { version = "1.7.2", optional = true }
rust_decimal = { version = "1.37.1", optional = true }
decimal = { version = "2.1.0", optional = true }
url = { version = "2.5.4", optional = true }
bytes = { version = "1.10.1", optional = true }
dashmap = { version = "6.1.0", optional = true }
indexmap = { version = "2.9.0", optional = true }
smallvec = { version = "1.15.1", optional = true }
