[package]
name = "arri_repr"
description = "Rust representations of Arri types"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dev-dependencies]
# TODO: be able to remove this dev dependency
serde_json = "1.0.140"

[features]
any = ["dep:serde"]
chrono = ["dep:chrono"]
time = ["dep:time"]
uuid = ["dep:uuid"]
bigdecimal = ["dep:bigdecimal"]
num-bigint = ["dep:num-bigint"]
num-bigfloat = ["dep:num-bigfloat"]
rust_decimal = ["dep:rust_decimal"]
decimal = ["dep:decimal"]
url = ["dep:url"]
bytes = ["dep:bytes"]
dashmap = ["dep:dashmap"]
smallvec = ["dep:smallvec"]

[dependencies]
# TODO: see if we can make downcast also a feature flag
arri_common = { workspace = true }
downcast-rs = "2.0.1"
ronky_derive = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-bigfloat = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
decimal = { workspace = true, optional = true }
url = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
