[package]
name = "ronky"
description = "A simple way to export Rust definitions to Arri types"
readme = "README.md"

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ronky_derive = { path = "../ronky_derive/", optional = true }

[dev-dependencies]
ronky_derive = { path = "../ronky_derive/" }

[features]
default = []
derive = ["ronky_derive"]
