[package]
name = "ronky"
description = "A simple way to export Rust definitions to Arri types"
readme = "README.md"

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arri_repr = { workspace = true, features = [] }
ronky_derive = { workspace = true, optional = true }

[dev-dependencies]
ronky_derive.workspace = true

[features]
default = []
derive = ["ronky_derive"]
chrono = ["arri_repr/chrono"]
time = ["arri_repr/time"]
uuid = ["arri_repr/uuid"]
bigdecimal = ["arri_repr/bigdecimal"]
num-bigint = ["arri_repr/num-bigint"]
num-bigfloat = ["arri_repr/num-bigfloat"]
rust_decimal = ["arri_repr/rust_decimal"]
url = ["arri_repr/url"]
decimal = ["arri_repr/decimal"]
bytes = ["arri_repr/bytes"]
dashmap = ["arri_repr/dashmap"]
indexmap = ["arri_repr/indexmap"]
smallvec = ["arri_repr/smallvec"]
