[package]
name = "ronky_derive"
description = "Macro implementation of #[derive(Export)]"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
arri_repr = { path = "../arri_repr" }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
