[package]
name = "ronky_derive"
description = "Macro implementation of #[derive(Export)]"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
arri_repr.workspace = true
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.103", features = ["derive"] }
