[package]
name = "ronky_derive"
description = "Macro implementation of #[derive(Export)]"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
arri_common = { path = "../arri_common" }
heck = { workspace = true }
proc-macro2 = "1.0.95"
proc-macro-crate = "3.2.0"
quote = "1.0.40"
sonic-rs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
syn = { version = "2.0.101", features = ["derive"] }

[features]
default = []
serialization = ["sonic-rs", "serde"]
