[package]
name = "test_suite"
description = "Ronky test suite, should only be used for testing"
readme = "README.md"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ronky = { path = "../ronky", features = ["derive"] }

[lints]
workspace = true
