[package]
version = "0.1.0"
name = "exported"
description = "Just the exported trait"
readme = "README.md"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde_json.workspace = true

[lints]
workspace = true
