[package]
name = "ronky_exported"
description = "Just the exported trait"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde_json.workspace = true

[lints]
workspace = true
