[package]
name = "ronky_proc"
readme = "README.md"
description = "A procedural macro for generating types based on a struct definition"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = { version = "2.0.71", features = ["extra-traits"] }
quote = "1.0.36"
serde_json.workspace = true
proc-macro2 = "1.0.86"

[dev-dependencies]
ronky_exported = { path = "../exported" }

[lib]
proc-macro = true
