[package]
name = "about"
description = "Example usage with an About object for a Human and some Pets"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ronky = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
